--- a/BlazorUI/BlazorUI.csproj
+++ b/BlazorUI/BlazorUI.csproj
@@ -7,7 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
+      <ProjectReference Include="..\JsonDataAccess\JsonDataAccess.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Radzen.Blazor" Version="3.17.1" />
     </ItemGroup>
 
 </Project>
