--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Radzen.Blazor" Version="3.17.1" />
+    </ItemGroup>
+
 </Project>
