--- a/JsonDataAccess/JsonDataAccess.csproj
+++ b/JsonDataAccess/JsonDataAccess.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\Entities\Entities.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Radzen.Blazor" Version="3.17.1" />
     </ItemGroup>
 
 </Project>
