assignment 2 rest and http client

--- a/BlazorUI/BlazorUI.csproj
+++ b/BlazorUI/BlazorUI.csproj
@@ -10,6 +10,7 @@
       <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\Contracts\Contracts.csproj" />
       <ProjectReference Include="..\JsonDataAccess\JsonDataAccess.csproj" />
+      <ProjectReference Include="..\RestClient\RestClient.csproj" />
     </ItemGroup>
 
     <ItemGroup>
